force-app/main/default/objects/Hosts__c/fields/Most_Recent_Event__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Hosts</relationshipLabel>
    <relationshipName>Hosts</relationshipName>
    <type>Lookup</type>
</CustomField>