force-app/main/default/objects/Hosts__c/fields/Most_Recent_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Event_Date__c</fullName>
    <label>Most Recent Event Date</label>
    <type>DateTime</type>
</CustomField>