force-app/main/default/objects/Hosts__c/fields/Most_Recent_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Status_Change__c</fullName>
    <label>Most Recent Status Change</label>
    <type>DateTime</type>
</CustomField>