force-app/main/default/objects/Hosts__c/fields/Most_Recent_Task_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Task_Created_Date_Time__c</fullName>
    <label>Most Recent Task Created Date/Time</label>
    <type>DateTime</type>
</CustomField>