force-app/main/default/objects/Hosts__c/fields/Name_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Contact__c</fullName>
    <label>Name of Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>