force-app/main/default/objects/Hosts__c/fields/Next_Booked_Event__c.field-meta.xml
<CustomField>
    <fullName>Next_Booked_Event__c</fullName>
    <label>Next Booked Event</label>
    <type>DateTime</type>
</CustomField>