force-app/main/default/objects/Hosts__c/fields/Next_Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Reason__c</fullName>
    <label>Next Contact Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>