force-app/main/default/objects/Hosts__c/fields/Next_Event_Suggestion_1__c.field-meta.xml
<CustomField>
    <fullName>Next_Event_Suggestion_1__c</fullName>
    <label>Next Event Suggestion #1</label>
    <type>DateTime</type>
</CustomField>