force-app/main/default/objects/Hosts__c/fields/Next_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_up__c</fullName>
    <inlineHelpText>This field is automatically set whenever you create an event, related to the host. It is set to be one day after the event you create.</inlineHelpText>
    <label>Next Follow-up</label>
    <type>Date</type>
</CustomField>