force-app/main/default/objects/Hosts__c/fields/Not_interested_reason__c.field-meta.xml
<CustomField>
    <fullName>Not_interested_reason__c</fullName>
    <label>Not interested reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>