force-app/main/default/objects/Hosts__c/fields/Opening_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours__c</fullName>
    <inlineHelpText>Write as
Mon-Fri: 09:00 - 21:00
Sat-Sun: Closed</inlineHelpText>
    <label>Opening Hours</label>
    <type>TextArea</type>
</CustomField>