force-app/main/default/objects/Hosts__c/fields/Penalty_Free_Cancel_Window__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Free_Cancel_Window__c</fullName>
    <label>Penalty-Free Cancel Window</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>