force-app/main/default/objects/Hosts__c/fields/Phone_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Phone_Formatted__c</fullName>
    <label>Phone Formatted (Deprecated)</label>
    <type>Phone</type>
</CustomField>