force-app/main/default/objects/Hosts__c/fields/plCounty__c.field-meta.xml
<CustomField>
    <fullName>plCounty__c</fullName>
    <label>County</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>County</valueSetName>
    </valueSet>
</CustomField>