force-app/main/default/objects/Hosts__c/fields/Refreshments__c.field-meta.xml
<CustomField>
    <fullName>Refreshments__c</fullName>
    <label>Refreshments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Drinks</fullName>
            </value>
            <value>
                <fullName>Light snacks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>