force-app/main/default/objects/Hosts__c/fields/Refund_Amount_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount_in_Campaign__c</fullName>
    <label>Refund Amount in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>