force-app/main/default/objects/Hosts__c/fields/ROAS__c.field-meta.xml
<CustomField>
    <fullName>ROAS__c</fullName>
    <inlineHelpText>Calculated Return on Advertising Spend on the Host&apos;s most recently completed Campaigns</inlineHelpText>
    <label>ROAS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>