force-app/main/default/objects/Hosts__c/fields/Short_Notice_Availability__c.field-meta.xml
<CustomField>
    <fullName>Short_Notice_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Short-Notice Availability</label>
    <type>Checkbox</type>
</CustomField>