force-app/main/default/objects/Hosts__c/fields/Sign_ups_and_Updates__c.field-meta.xml
<CustomField>
    <fullName>Sign_ups_and_Updates__c</fullName>
    <label>Sign-ups and Updates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>