force-app/main/default/objects/Hosts__c/fields/Standard_Menu__c.field-meta.xml
<CustomField>
    <fullName>Standard_Menu__c</fullName>
    <label>Standard Menu</label>
    <length>100</length>
    <type>Text</type>
</CustomField>