force-app/main/default/objects/Hosts__c/fields/Standard_Minimum_Seats_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Standard_Minimum_Seats_Invoiced__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Standard Minimum Seats Invoiced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>