force-app/main/default/objects/Hosts__c/fields/Standard_Price_Per_Cover__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price_Per_Cover__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Standard Price Per Cover</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>