force-app/main/default/objects/Hosts__c/fields/Standard_Venue_Rental_Cost__c.field-meta.xml
<CustomField>
    <fullName>Standard_Venue_Rental_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Standard Venue Rental Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>