force-app/main/default/objects/Hosts__c/fields/Standard_Venue_Rental_Cost_Excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Standard_Venue_Rental_Cost_Excl_VAT__c</fullName>
    <formula>Standard_Venue_Rental_Cost__c  * 0.8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Venue Rental Cost Excl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>