force-app/main/default/objects/Hosts__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
            <value>
                <fullName>Closed - Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>