force-app/main/default/objects/Hosts__c/fields/Suggested_Seat_Cost__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Seat_Cost__c</fullName>
    <label>Suggested Price Per Cover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>