force-app/main/default/objects/Hosts__c/fields/Suggested_Venue_Rental_Cost__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Venue_Rental_Cost__c</fullName>
    <label>Suggested Venue Rental Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>