force-app/main/default/objects/Hosts__c/fields/Task_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Task_Overdue__c</fullName>
    <formula>TODAY() &gt; Task_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Overdue</label>
    <type>Checkbox</type>
</CustomField>