force-app/main/default/objects/Hosts__c/fields/Teaser_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Teaser_Sent_At__c</fullName>
    <label>Teaser Sent At</label>
    <type>DateTime</type>
</CustomField>