force-app/main/default/objects/Hosts__c/fields/Teaser_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Teaser_Sent_To__c</fullName>
    <label>Teaser Sent To</label>
    <type>Email</type>
</CustomField>