force-app/main/default/objects/Hosts__c/fields/Teaser_Status__c.field-meta.xml
<CustomField>
    <fullName>Teaser_Status__c</fullName>
    <label>Teaser Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>