force-app/main/default/objects/Hosts__c/fields/Time_of_Availability_Check__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Availability_Check__c</fullName>
    <label>Time of Availability Check</label>
    <type>DateTime</type>
</CustomField>