force-app/main/default/objects/Hosts__c/fields/Total_amount_of_cancelled_tickets__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_of_cancelled_tickets__c</fullName>
    <label>Total amount of cancelled tickets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>