force-app/main/default/objects/Hosts__c/fields/Venue_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Venue_Type_del__c</fullName>
    <label>Venue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Ball Room</fullName>
            </value>
            <value>
                <fullName>Terrace</fullName>
            </value>
            <value>
                <fullName>Café</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Company Lecture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>