force-app/main/default/objects/Hosts__c/fields/Zapier_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Zapier_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zapier Trigger</label>
    <type>Checkbox</type>
</CustomField>