force-app/main/default/objects/Hosts__c/validationRules/Cannot_Creat_Host_In_Dffrnt_Market_Un.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Creat_Host_In_Dffrnt_Market_Un</fullName>
    <active>true</active>
    <description>You cannot create a Host in a different Market Unit.</description>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(TEXT($User.Market_Unit__c) = TEXT(Market_Unit__c))
)</errorConditionFormula>
    <errorMessage>You cannot create a Host in a different Market Unit.</errorMessage>
</ValidationRule>