force-app/main/default/objects/Hosts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>(1 OR 3) AND 2</booleanFilter>
    <columns>Zapier_Trigger__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Host_ID__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <columns>Realistic_Capacity__c</columns>
    <columns>Host_Address__City__s</columns>
    <columns>Host_Address__Street__s</columns>
    <columns>Host_Address__PostalCode__s</columns>
    <columns>Industry__c</columns>
    <columns>Industry_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Realistic_Capacity__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Company_Lecture__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Realistic_Capacity__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Records</label>
</ListView>