force-app/main/default/objects/Hosts__c/listViews/Company_Hosts_New.listView-meta.xml
<ListView>
    <fullName>Company_Hosts_New</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Default_Attendance_Format__c</columns>
    <columns>Company_Lecture__c</columns>
    <columns>Company_Type__c</columns>
    <columns>Industry__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Lecture__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Mathias</value>
    </filters>
    <label>Company Hosts (New)</label>
</ListView>