force-app/main/default/objects/Hosts__c/listViews/Danish_Hosts_Hosts.listView-meta.xml
<ListView>
    <fullName>Danish_Hosts_Hosts</fullName>
    <filterScope>Queue</filterScope>
    <label>Danish Event Coordinators</label>
    <queue>Danish_Event_Bookers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>