force-app/main/default/objects/Hosts__c/listViews/Irish_Event_Coordinators_Hosts.listView-meta.xml
<ListView>
    <fullName>Irish_Event_Coordinators_Hosts</fullName>
    <filterScope>Queue</filterScope>
    <label>Irish Event Coordinators</label>
    <queue>Irish_Event_Coordinators</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>