force-app/main/default/objects/Hosts__c/listViews/Mathias_Clean_up.listView-meta.xml
<ListView>
    <fullName>Mathias_Clean_up</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Host_ID__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Company_Type__c</columns>
    <columns>City__c</columns>
    <columns>Host_Address__City__s</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Test_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>plCounty__c</field>
        <operation>equals</operation>
    </filters>
    <label>Mathias - Clean-up</label>
</ListView>