force-app/main/default/objects/Hosts__c/listViews/My_Hosts.listView-meta.xml
<ListView>
    <fullName>My_Hosts</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Default_Attendance_Format__c</columns>
    <columns>Company_Lecture__c</columns>
    <columns>Company_Type__c</columns>
    <columns>Industry__c</columns>
    <columns>Industry_Code__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Working,Closed - Won</value>
    </filters>
    <label>My Hosts</label>
</ListView>