force-app/main/default/objects/Hosts__c/listViews/Restaurant_My_Working_Hosts_Danmark.listView-meta.xml
<ListView>
    <fullName>Restaurant_My_Working_Hosts_Danmark</fullName>
    <columns>NAME</columns>
    <columns>Phone_Formatted__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Follow_up__c</columns>
    <columns>County__c</columns>
    <columns>Standard_Price_Per_Cover__c</columns>
    <columns>Most_Recent_Event_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Task_Date__c</columns>
    <columns>Task_Overdue__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Company_Lecture__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Test_Record__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed - Won</value>
    </filters>
    <label>Restaurant - My Working Hosts</label>
</ListView>