force-app/main/default/objects/Hosts__c/listViews/Ringeliste_Danmark_v2.listView-meta.xml
<ListView>
    <fullName>Ringeliste_Danmark_v2</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Phone_Formatted_Formula__c</columns>
    <columns>Email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>County_Denmark__c</columns>
    <columns>Address__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>City__c</columns>
    <columns>CVR__c</columns>
    <columns>Industry__c</columns>
    <columns>Industry_Code__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>DFJ_DK,Testamente_DK</value>
    </filters>
    <filters>
        <field>Company_Lecture__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Test_Record__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Restaurant - Ringeliste (Danmark)</label>
    <queue>Danish_Event_Bookers</queue>
</ListView>