force-app/main/default/objects/Hosts__c/listViews/Ringeliste_Postnummer_Danmark.listView-meta.xml
<ListView>
    <fullName>Ringeliste_Postnummer_Danmark</fullName>
    <columns>NAME</columns>
    <columns>Phone_Formatted__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Follow_up__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>County__c</columns>
    <columns>Standard_Price_Per_Cover__c</columns>
    <columns>Most_Recent_Event_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>DFJ_DK,Testamente_DK</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Test Host,Test New Host,Din Familiejurist,Din Familjejurist</value>
    </filters>
    <label>Ringeliste - Postnummer (Danmark)</label>
</ListView>