force-app/main/default/objects/Hosts__c/listViews/Swedish_Hosts_Hosts.listView-meta.xml
<ListView>
    <fullName>Swedish_Hosts_Hosts</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>plCounty__c</columns>
    <columns>County__c</columns>
    <columns>Host_ID__c</columns>
    <columns>Host_Address__Street__s</columns>
    <columns>Host_Address__PostalCode__s</columns>
    <columns>Host_Address__City__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>FA_SE,Testamente_SV</value>
    </filters>
    <filters>
        <field>County__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Swedish Hosts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>