force-app/main/default/objects/Hosts__c/listViews/Test_V_rdplatser_Sweden.listView-meta.xml
<ListView>
    <fullName>Test_V_rdplatser_Sweden</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Host_ID__c</columns>
    <columns>Event_Counter__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>County__c</columns>
    <columns>Standard_Price_Per_Cover__c</columns>
    <columns>Market_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>FA_SE,Testamente_SV</value>
    </filters>
    <label>Test Värdplatser (Sweden)</label>
</ListView>